# actorrise

./: .cursorignore  .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  DIAGNOSIS_SHAKESPEARE_ONLY.md  ONBOARDING.md  README.md  SCENEPARTNER.md  SEARCH_OPTIMIZATION_PROMPT.md  SUBMISSION_PAGES.md  SUPABASE_SETUP.md  VOICE_FEATURES.md  instrumentation-client.ts  marketing.md  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyrightconfig.json  render.yaml  sentry.edge.config.ts  sentry.server.config.ts  vercel.json
backend/: .env.example  DATABASE_SETUP.md  Dockerfile  EMBEDDING_UPGRADE_SUMMARY.md  MODERATION_SYSTEM.md  README_SEARCH.md  SEARCH_OPTIMIZATION_PLAN.md  SEARCH_OPTIMIZATION_README.md  check_authors.py  check_db.py  check_monologues.py  database.db  migrate_add_embedding.py  migrate_add_supabase_auth.py  migrate_add_user_name.py  migrate_to_postgres.py  migrate_update_monologue_columns.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/docs/: LEGAL_CONTENT_SOURCES.md
backend/scripts/: CONTEMPORARY_SOURCES.md  README_SCRAPER.md  add_act_scene_columns.py  add_admin_user_management_tables.py  add_content_gap_tables.py  add_email_do_not_contact_table.py  add_email_tracking_tables.py  add_embedding_vector_column.py  add_embedding_vector_v2.py  add_film_tv_favorites_table.py  add_film_tv_references_table.py  add_film_tv_tables.py  add_has_completed_profile_onboarding.py  add_has_seen_first_rehearsal.py  add_ivfflat_indexes.py  add_last_seen_feature_id_column.py  add_marketing_opt_in.py  add_moderation_schema.py  (+91 more)
(+696 files in other folders)
