[project]
name = "actorrise-backend"
version = "0.1.0"
description = "ActorRise Platform Backend API"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.12.5",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.1",
    "psycopg2-binary>=2.9.9",
    "supabase>=2.0.0",
    "pillow>=10.0.0",
]