[project]
name = "actorrise-backend"
version = "0.1.0"
description = "ActorRise Platform Backend API"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.12.5",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.1",
    "psycopg2-binary>=2.9.9",
    "supabase>=2.0.0",
    "pillow>=10.0.0",
    # AI & NLP
    "openai>=1.0.0",
    "numpy>=1.24.0",
    # LangChain
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    # Text Processing & Parsing
    "lxml>=4.9.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.10.0",
    "spacy>=3.7.0",
    # Data Fetching
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    # Vector search
    "pgvector>=0.3.0",
    # Payment Processing
    "stripe>=8.0.0",
    "python-multipart>=0.0.20",
]
